--- a/models/pipeline_regression.ipynb
+++ b/models/pipeline_regression.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "[8 rows x 5 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,9 +214,9 @@
     "df_quanti = df_dpe.select_dtypes(include=['number'])\n",
     "\n",
     "#Calcul du IQR pour chaque colonne \n",
-    "Q1 = df_quanti.quantile(0.025)\n",
-    "Q3 = df_quanti.quantile(0.975)\n",
-    "IQR = Q3-Q1\n",
+    "Quanti_bas = df_quanti.quantile(0.025)\n",
+    "Quanti_haut = df_quanti.quantile(0.975)\n",
+    "IQR = Quanti_haut-Quanti_bas\n",
     "\n",
     "#Filtrage des données sans outliers \n",
     "df_dpe_filtered = df_dpe[~((df_quanti < (Q1 - 1.5 * IQR)) | (df_quanti > (Q3 + 1.5 * IQR))).any(axis=1)]\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "(311814, 10)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,6 +279,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#On change le type de Isolation pour pouvoir imputer une valeur string \n",
+    "df_dpe_filtered[\"Isolation_toiture_(0/1)\"] = df_dpe_filtered[\"Isolation_toiture_(0/1)\"].astype(object)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -287,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +317,7 @@
        "(218269, 9)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -402,64 +412,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>179545</th>\n",
-       "      <td>19130.542152</td>\n",
-       "      <td>8977.069565</td>\n",
-       "      <td>1947.0</td>\n",
+       "      <th>65003</th>\n",
+       "      <td>6718.527208</td>\n",
+       "      <td>20144.917377</td>\n",
+       "      <td>1800.0</td>\n",
        "      <td>10953.227514</td>\n",
        "      <td>2.5</td>\n",
-       "      <td>32.3</td>\n",
-       "      <td>6045.263729</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>11703.464228</td>\n",
+       "      <td>12535.042550</td>\n",
+       "      <td>16498.166982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175942</th>\n",
+       "      <td>16241.799295</td>\n",
+       "      <td>8977.069565</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>9449.518676</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>11703.464228</td>\n",
+       "      <td>9426.645715</td>\n",
        "      <td>10332.399339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>158139</th>\n",
-       "      <td>6718.527208</td>\n",
-       "      <td>8977.069565</td>\n",
-       "      <td>1994.0</td>\n",
-       "      <td>9449.518676</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>6045.263729</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8357.360188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17952</th>\n",
+       "      <th>248465</th>\n",
        "      <td>10209.585069</td>\n",
        "      <td>8977.069565</td>\n",
-       "      <td>1974.0</td>\n",
-       "      <td>10953.227514</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>11052.888814</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13130.418611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41861</th>\n",
-       "      <td>10209.585069</td>\n",
-       "      <td>20144.917377</td>\n",
-       "      <td>1975.0</td>\n",
-       "      <td>10953.227514</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>134.2</td>\n",
-       "      <td>11703.464228</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11427.587212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246221</th>\n",
-       "      <td>6718.527208</td>\n",
-       "      <td>8977.069565</td>\n",
-       "      <td>1986.0</td>\n",
+       "      <td>2010.0</td>\n",
        "      <td>9449.518676</td>\n",
        "      <td>2.5</td>\n",
-       "      <td>88.5</td>\n",
+       "      <td>39.8</td>\n",
        "      <td>6045.263729</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>12535.042550</td>\n",
        "      <td>8037.725584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135673</th>\n",
+       "      <td>13274.676631</td>\n",
+       "      <td>8977.069565</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10953.227514</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>6045.263729</td>\n",
+       "      <td>9666.307213</td>\n",
+       "      <td>8862.100964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219517</th>\n",
+       "      <td>13274.676631</td>\n",
+       "      <td>8977.069565</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10953.227514</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>48.3</td>\n",
+       "      <td>6045.263729</td>\n",
+       "      <td>9666.307213</td>\n",
+       "      <td>6851.265562</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -467,16 +477,16 @@
       ],
       "text/plain": [
        "        Etiquette_DPE  Type_bâtiment  ...  Isolation_toiture_(0/1)  Code_INSEE_(BAN)\n",
-       "179545   19130.542152    8977.069565  ...                      NaN      10332.399339\n",
-       "158139    6718.527208    8977.069565  ...                      0.0       8357.360188\n",
-       "17952    10209.585069    8977.069565  ...                      NaN      13130.418611\n",
-       "41861    10209.585069   20144.917377  ...                      NaN      11427.587212\n",
-       "246221    6718.527208    8977.069565  ...                      0.0       8037.725584\n",
+       "65003     6718.527208   20144.917377  ...             12535.042550      16498.166982\n",
+       "175942   16241.799295    8977.069565  ...              9426.645715      10332.399339\n",
+       "248465   10209.585069    8977.069565  ...             12535.042550       8037.725584\n",
+       "135673   13274.676631    8977.069565  ...              9666.307213       8862.100964\n",
+       "219517   13274.676631    8977.069565  ...              9666.307213       6851.265562\n",
        "\n",
        "[5 rows x 9 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +499,7 @@
     "X_train_imputed[cat_features] = categorical_imputer.fit_transform(X_train[cat_features])\n",
     "\n",
     "# Étape 2 : Appliquer le TargetEncoder sur les colonnes catégorielles déjà imputées\n",
-    "target_encoder = ce.TargetEncoder(cols=cat_features)\n",
+    "target_encoder = ce.TargetEncoder(cols=cat_features+iso_feature)\n",
     "X_train_encoded = target_encoder.fit_transform(X_train_imputed, y_train)\n",
     "\n",
     "# De même pour les données de test\n",
@@ -497,12 +507,12 @@
     "X_test_imputed[cat_features] = categorical_imputer.transform(X_test[cat_features])\n",
     "X_test_encoded = target_encoder.transform(X_test_imputed)\n",
     "\n",
-    "X_train_encoded.head()"
+    "X_test_encoded.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +548,7 @@
        "['pipeline_ml_regression.joblib']"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
