--- a/models/pipeline_regression.ipynb
+++ b/models/pipeline_regression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"/Users/pierrebourbon/Documents/PRO/Data/Master_SISE/Programmation_Python/Projet\")"
+    "# Change to the current working directory\n",
+    "current_workdir = os.getcwd()\n",
+    "os.chdir(current_workdir)"
    ]
   },
   {
@@ -43,16 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(\"extract-dpe.xlsx\")"
+    "df = pd.read_excel(\"../data/extract DPE.xlsx\")\n",
+    "# df = pd.read_csv(\"../data/data_output.csv\", header=0, sep=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +214,7 @@
        "max                   1.000000            111399.400000  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +257,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +279,7 @@
        "(311814, 10)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +422,7 @@
        "4                       Gaz naturel                      NaN            69256  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +446,7 @@
        "(218269, 9)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +598,7 @@
        "[311814 rows x 3 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,39 +723,312 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Pipeline final avec les données encodées et imputées\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Sauvegarde du pipeline complet\n",
+    "with open('pipeline_ml_regression.pkl', 'wb') as file:\n",
+    "    pickle.dump(pipeline, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 5297309.040964192\n",
+      "    Actual     Predicted\n",
+      "0  16643.4  25527.877049\n",
+      "1  13566.4  11246.452066\n",
+      "2   4220.7   3744.379780\n",
+      "3   2591.6   2322.954920\n",
+      "4   6331.8   6178.071316\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Load the model\n",
+    "model = joblib.load(\"pipeline_ml_regression.pkl\")\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Calculate the mean squared error\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(f\"Mean Squared Error: {mse}\")\n",
+    "\n",
+    "# Display the first few predictions alongside the actual values\n",
+    "results = pd.DataFrame({'Actual': y_test.values.flatten(), 'Predicted': y_pred.flatten()})\n",
+    "print(results.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Etiquette_DPE</th>\n",
+       "      <th>Type_bâtiment</th>\n",
+       "      <th>Année_construction</th>\n",
+       "      <th>Classe_inertie_bâtiment</th>\n",
+       "      <th>Hauteur_sous-plafond</th>\n",
+       "      <th>Surface_habitable_logement</th>\n",
+       "      <th>Type_énergie_principale_chauffage</th>\n",
+       "      <th>Isolation_toiture_(0/1)</th>\n",
+       "      <th>Code_INSEE_(BAN)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>65003</th>\n",
+       "      <td>C</td>\n",
+       "      <td>maison</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>Moyenne</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>Gaz naturel</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>69085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175942</th>\n",
+       "      <td>F</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Légère</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>Gaz naturel</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248465</th>\n",
+       "      <td>D</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Légère</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>39.8</td>\n",
+       "      <td>Électricité</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>69388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135673</th>\n",
+       "      <td>E</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Moyenne</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>Électricité</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>69381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219517</th>\n",
+       "      <td>E</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Moyenne</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>48.3</td>\n",
+       "      <td>Électricité</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>69387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2693</th>\n",
+       "      <td>D</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>1973.0</td>\n",
+       "      <td>Lourde</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>Réseau de Chauffage urbain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126954</th>\n",
+       "      <td>D</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>Lourde</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>61.3</td>\n",
+       "      <td>Électricité</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>69029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90230</th>\n",
+       "      <td>G</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lourde</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>90.4</td>\n",
+       "      <td>Électricité</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>69103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>278106</th>\n",
+       "      <td>D</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>Légère</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>52.4</td>\n",
+       "      <td>Électricité</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>69149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43636</th>\n",
+       "      <td>E</td>\n",
+       "      <td>appartement</td>\n",
+       "      <td>1967.0</td>\n",
+       "      <td>Légère</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>Réseau de Chauffage urbain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69259</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>93545 rows × 9 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['pipeline_ml_regression.joblib']"
+       "       Etiquette_DPE Type_bâtiment  Année_construction  \\\n",
+       "65003              C        maison              1800.0   \n",
+       "175942             F   appartement                 NaN   \n",
+       "248465             D   appartement              2010.0   \n",
+       "135673             E   appartement                 NaN   \n",
+       "219517             E   appartement                 NaN   \n",
+       "...              ...           ...                 ...   \n",
+       "2693               D   appartement              1973.0   \n",
+       "126954             D   appartement              2011.0   \n",
+       "90230              G   appartement                 NaN   \n",
+       "278106             D   appartement              1960.0   \n",
+       "43636              E   appartement              1967.0   \n",
+       "\n",
+       "       Classe_inertie_bâtiment  Hauteur_sous-plafond  \\\n",
+       "65003                  Moyenne                   2.5   \n",
+       "175942                  Légère                   3.9   \n",
+       "248465                  Légère                   2.5   \n",
+       "135673                 Moyenne                   2.7   \n",
+       "219517                 Moyenne                   2.8   \n",
+       "...                        ...                   ...   \n",
+       "2693                    Lourde                   2.5   \n",
+       "126954                  Lourde                   2.5   \n",
+       "90230                   Lourde                   2.5   \n",
+       "278106                  Légère                   2.5   \n",
+       "43636                   Légère                   2.5   \n",
+       "\n",
+       "        Surface_habitable_logement Type_énergie_principale_chauffage  \\\n",
+       "65003                        215.0                       Gaz naturel   \n",
+       "175942                        39.3                       Gaz naturel   \n",
+       "248465                        39.8                       Électricité   \n",
+       "135673                        17.2                       Électricité   \n",
+       "219517                        48.3                       Électricité   \n",
+       "...                            ...                               ...   \n",
+       "2693                          73.0        Réseau de Chauffage urbain   \n",
+       "126954                        61.3                       Électricité   \n",
+       "90230                         90.4                       Électricité   \n",
+       "278106                        52.4                       Électricité   \n",
+       "43636                         93.0        Réseau de Chauffage urbain   \n",
+       "\n",
+       "        Isolation_toiture_(0/1) Code_INSEE_(BAN)  \n",
+       "65003                       1.0            69085  \n",
+       "175942                      NaN            69384  \n",
+       "248465                      1.0            69388  \n",
+       "135673                      0.0            69381  \n",
+       "219517                      0.0            69387  \n",
+       "...                         ...              ...  \n",
+       "2693                        NaN            69256  \n",
+       "126954                      0.0            69029  \n",
+       "90230                       1.0            69103  \n",
+       "278106                      1.0            69149  \n",
+       "43636                       NaN            69259  \n",
+       "\n",
+       "[93545 rows x 9 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Pipeline final avec les données encodées et imputées\n",
-    "pipeline.fit(X_train, y_train)\n",
-    "\n",
-    "# Sauvegarde du pipeline complet\n",
-    "joblib.dump(pipeline, 'pipeline_ml_regression.joblib')"
+    "X_test\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_test.to_csv('X_test.csv')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "projet_pythonML",
+   "display_name": "m2-python-ml",
    "language": "python",
    "name": "python3"
   },
@@ -766,7 +1042,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
